Fixing headline on small devices view

--- a/sass/core/_responsive.scss
+++ b/sass/core/_responsive.scss
@@ -539,10 +539,10 @@ Media Queries for Tablets
     aside li { margin-bottom: 5px; }
 
   }
-  
-  
+
+
   /* Home: Our Clients */
-  
+
   .our-clients {
 
     li {
@@ -596,7 +596,7 @@ Media Queries for Smartphones
 
   header.default .logo { width: 100px; }
   #menu-trigger { display: inline-block; }
-  
+
   #home section.testmonial {
     padding: 25px 0 10px 0 !important;
 
@@ -604,7 +604,7 @@ Media Queries for Smartphones
       font-size: $font-medium2;
       line-height: 24px;
     }
-    
+
   }
 
   #menu2 {
@@ -828,7 +828,7 @@ Media Queries for Smartphones
 
   #services,
   .services-text { width: 100%; }
-  
+
   .services {
     .videothumbs {
       width: 100%;
@@ -919,7 +919,7 @@ Media Queries for Smartphones
           }
         }
       } // artcile
-      
+
       #sobre-nos-values {
         padding-bottom: 40px;
 
@@ -931,8 +931,8 @@ Media Queries for Smartphones
           }
         }
       } // #sobre-nos-values
-      
-      
+
+
     } // section:last-child
   } // about-us
 
@@ -1446,10 +1446,10 @@ Media Queries for Smartphones
       }
     }
   }
-  
-  
+
+
   /* Home: Our Clients */
-  
+
   .our-clients {
 
     li {
@@ -1712,14 +1712,14 @@ Media Queries with adjustments for Smartphones
   #font_show,
   .box_colors_show,
   .bt_download { display: none; }
-  
+
   ul.downloads li {
     width: 300px;
   }
-  
-  
+
+
   /* Home: Our Clients */
-  
+
   .our-clients {
     padding-bottom: 30px !important;
 
@@ -1728,8 +1728,8 @@ Media Queries with adjustments for Smartphones
       height: auto !important;
       margin: 0 0 20px 0;
     }
-  }  
-  
+  }
+
 }
 
 
@@ -1742,12 +1742,17 @@ Media Queries with more adjustments for Smartphones
 
 
   #home {
-    h2 {
-      font-size: 45px;
-      line-height: 52px;
-    }
+    section.hero {
 
-   h3 { font-size: 24px; }
+      h2 {
+        font-size: 22px;
+        line-height: 36px;
+      }
+
+      h3, .logo-tip-trigger {
+        font-size: 12px;
+      }
+    }
   }
 
   .icons a img { width: 50px; }
